# hatch_project

./: .gitignore  pyproject.toml
services/service1/: pyproject.toml
services/service1/service1/: main.py
services/service1/service1/src/: __init__.py  service1_functions.py
shared/: __init__.py  shared_functions.py
