[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "poetry_project"
version = "0.1.0"
description = "Monorepo avec Hatch"
authors = [
    {name = "Votre Nom", email="<votre.email@example.com>" }
]
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "pandas"
]