[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "service1"
version = "0.1.0"
description = "A service example built with Hatch"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
dependencies = [
    "pandas"
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
include = ["service1", "pyproject.toml"]

[project.scripts]
service1 = "service1.main:main"


[tool.hatch.build.targets.wheel.force-include]
"../../shared" = "shared"  # Inclure le dossier shared
